--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "npm --prefix backend run build && npm --prefix frontend run build",
+    "build": "npm --prefix backend install && npm --prefix frontend install && npm --prefix backend run build && npm --prefix frontend run build",
     "start": "concurrently \"npm --prefix backend start\" \"npm --prefix frontend start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
